2011-01-25  Sebastian Pop  <sebastian.pop@amd.com>

	* gfortran.dg/graphite/id-24.f: New.
	* gfortran.dg/graphite/id-25.f: New.

2011-01-25  Sebastian Pop  <sebastian.pop@amd.com>

	* gfortran.dg/graphite/id-23.f: New.

2011-01-25  Sebastian Pop  <sebastian.pop@amd.com>

	* gfortran.dg/graphite/interchange-3.f90: Un-XFAILed.

2011-01-25  Sebastian Pop  <sebastian.pop@amd.com>

	* gcc.dg/graphite/block-0.c: Un-XFAILed.
	* gcc.dg/graphite/block-1.c: Un-XFAILed.
	* gcc.dg/graphite/block-7.c: Un-XFAILed.
	* gcc.dg/graphite/block-8.c: Un-XFAILed.
	* gcc.dg/graphite/interchange-12.c: Un-XFAILed.
	* gcc.dg/graphite/interchange-14.c: Un-XFAILed.
	* gcc.dg/graphite/interchange-15.c: Un-XFAILed.
	* gcc.dg/graphite/interchange-8.c: Un-XFAILed.
	* gcc.dg/graphite/interchange-mvt.c: Un-XFAILed.

2011-01-25  Sebastian Pop  <sebastian.pop@amd.com>

	* gcc.dg/graphite/block-0.c: Add documentation.
	* gcc.dg/graphite/block-4.c: Same.
	* gcc.dg/graphite/block-7.c: Same.
	* gcc.dg/graphite/block-8.c: New.
	* gcc.dg/graphite/interchange-1.c: Un-XFAILed.
	* gcc.dg/graphite/interchange-11.c: Un-XFAILed.
	* gcc.dg/graphite/interchange-12.c: Add documentation.
	* gcc.dg/graphite/interchange-13.c: New.
	* gcc.dg/graphite/interchange-14.c: New.
	* gcc.dg/graphite/interchange-15.c: New.
	* gcc.dg/graphite/interchange-8.c: Add documentation.
	* gcc.dg/graphite/interchange-mvt.c: Same.

2011-01-24  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/47408
	* gcc.target/powerpc/altivec-11.c: Add explicit -mno-vsx.
	* gcc.target/powerpc/altivec-14.c: Ditto.
	* gcc.target/powerpc/altivec-33.c: Ditto.
	* gcc.target/powerpc/altivec-types-1.c: Ditto.
	* gcc.target/powerpc/altivec-types-2.c: Ditto.
	* gcc.target/powerpc/altivec-types-3.c: Ditto.
	* gcc.target/powerpc/altivec-types-4.c: Ditto.
	* gcc.target/powerpc/ppc-vector-memcpy.c: Ditto.
	* gcc.target/powerpc/ppc-vector-memset.c: Ditto.
	* g++.dg/ext/altivec-15.C: Ditto.
	* g++.dg/ext/altivec-types-1.C: Ditto.